--- a/TODO.txt
+++ b/TODO.txt
@@ -11,27 +11,15 @@ Perfil
   - Adaptar vistas para modos
 
 Negociacion
-  - Ordenar por fecha en orden ascendente
-  - Enviar mensajes al pulsar intro
   - WebSocket para notificar cuantos chat hay sin leer
 
 Valoracion
   - Ponerle thymeleaf
   - Añadir boton enviar valoracion
+  - CSS
 
 Imagenes de usuario/propuestas
 
-Busqueda de perfiles
-  - Al pinchar en la imagen tiene que lanzar el modal de perfil
-
-Busqueda de propuestas
-  - Al pinchar en la imagen tiene que lanzar el modal de propuesta (en modo vista)
-  - Al pinchar en nombre de la empresa tiene que lanzar el modal de perfil en modo vista
-  - Boton para ver detalles
-
-  
-Contrataciones - Pendientes de valorar
-  - Añadir boton de valorar que lance el modal de valoraciones
 
 Busquedas por tag en perfil y propuesta
 
