Arreglado tag ALL

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 Boton cerrar propuesta en modo vista del modal
 
-Busquedas por tag en perfil y propuesta al pinchar en tag de uno especifico o seleccionar en la barra
+Busqueda por tag ALL
 
 Registro
  * Tags del perfil
