--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,9 @@
 -----------------------------------------------------------------------------
 
 Ultimatum
- - JSON devuelto es undefined y no hace el resto al mandar ultimatum
- - Imagen del ultimatum lo hace mal
  - Validacion ultimatum
  - El otro debe ser el unico que pueda responder
- - Funcionalidad al responder ultimatum -> P
+ - Funcionalidad al responder ultimatum
 
 
 
