--- a/TODO.txt
+++ b/TODO.txt
@@ -1,65 +1,68 @@
 Pagina de inicio - Carlos
- - Busquedas -> que te mande a las busquedas perfiles/propuestas con el texto como input para busqueda por nombre. Meterlas en un form.
- - Propuestas -> Empresa -- Nombre propuesta. Como botón uno solo para visualizarla que cargue el modal.
+ - Busquedas -> que te mande a las busquedas perfiles/propuestas con el texto como input para busqueda por nombre. Meterlas en un form. 
+ - Propuestas -> Empresa -- Nombre propuesta. Como botón uno solo para visualizarla que cargue el modal. [HECHO]
 
-
+b
 Administracion
 	Denuncia - Carlos
+	  Darle sentido a la barra de búsqueda (filtros) [HECHO]
 	  Controlador hacer los redirect y mensajes de alert
 	  Validacion cliente y controlador
 	  Al tramitar mandar notificacion a los usuarios de que se ha tramitado su denuncia
 	  
 	Propuestas - Nacho (solo notificacion, no websocket)
-	  Borrar y verificarlas hay que notificar a la empresa - HECHO
-	  Borrar notificar a los usuarios que esten relacionados - HECHO
+	  Borrar y verificarlas hay que notificar a la empresa - [HECHO]
+	  Borrar notificar a los usuarios que esten relacionados - [HECHO]
 	  
 	Usuarios y empresas - Nacho
-	  Verificarlos notificar al usuario	- HECHO
+	  Verificarlos notificar al usuario	- [HECHO]
 	
 
 Negociacion
 
 	Ultimatum - Nacho
 	 - Validacion ultimatum
-	 - Cambiar de color el boton de visualizar HECHO
-	 - El otro debe ser el unico que pueda responder HECHO
+	 - Cambiar de color el boton de visualizar [HECHO]
+	 - El otro debe ser el unico que pueda responder [HECHO]
 	 - Funcionalidad al responder ultimatum HECHO
-	 - Enviar una notificacion de que te han mandado un ultimatum HECHO
-	 - Enviar mensaje tiene que ser tipo POST con ajax convirtiendo a objeto HECHO
+	 - Enviar una notificacion de que te han mandado un ultimatum [HECHO]
+	 - Enviar mensaje tiene que ser tipo POST con ajax convirtiendo a objeto [HECHO]
 	 
 PERFIL - Carlos
   Edicion 
-	  - Validacion en cliente
-	  - Al ser admin  no deberia salir tags, historial de propuestas ni score
+	  - Validacion en cliente []
+	  - Al ser admin  no deberia salir tags, historial de propuestas ni score [HECHO]
   Vista
-      - PerfilesRRSS
-      - Historial de propuestas
+      - PerfilesRRSS [A MEDIAS]
+      - Historial de propuestas []
       
 
 Navbar - Nacho
-	- Numeros notificaciones cuando tienes 0 mal. HECHO
-	- Muestra siempre notificaciones de admin HECHO
+	- Numeros notificaciones cuando tienes 0 mal. [HECHO]
+	- Muestra siempre notificaciones de admin [HECHO]
 
 
 Propuesta - Carlos
   - Funcionalidad apuntarse notificar a la empresa que se ha apuntado un usuario.
 
 Contrataciones - Nacho
-  - Valoracion no funciona bien cuando se puntua con decimales  HECHO
-  - Notificar al usuario que se ha valorado, pudiendo ver la valoracion en un modal. HECHO (falta lo del modal en inicio).
-  - Borrar el mensaje de alert HECHO
-  - Mostrar la valoracion que se ha enviado mediante un modal. HECHO
+  - Valoracion no funciona bien cuando se puntua con decimales  [HECHO]
+  - Notificar al usuario que se ha valorado, pudiendo ver la valoracion en un modal. [HECHO] (falta lo del modal en inicio).
+  - Borrar el mensaje de alert [HECHO]
+  - Mostrar la valoracion que se ha enviado mediante un modal. [HECHO]
   
  INICIO - Nacho
  - Notificaciones/valoraciones (para el final). Notificaciones solo deberían tener el botón de eliminar notificación. Valoracion tambien permitir ver modal.
  
   
-Inputs de busqueda de la navbar meterlos en un form. - Carlos
+Inputs de busqueda de la navbar meterlos en un form. - Carlos []
 sendRedirects -> cambiarlos a la ruta en la que se estaba actualmente - Nacho
 
 
 
 Busqueda  de administracion https://www.w3schools.com/w3css/w3css_filters.asp PENDIENTE
+
+*ERROR AL TRAMITAR UNA DENUNCIA AUNQUE PARECE HACERLO BIEN TRAS EL ERROR
 
 
 DUDAS PROFESOR
